--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -144,6 +144,12 @@ jobs:
         run: |
           echo "ENV=$( sudo docker inspect $CONTAINER_ID | jq --compact-output  '.[0].Config.Env' )" >> $GITHUB_ENV
           echo "CWD=$( sudo docker inspect $CONTAINER_ID | jq --compact-output '.[0].Config.WorkingDir' )" >> $GITHUB_ENV
+
+      - name: Set root password
+        shell: bash
+        env:
+          AUTH_KEY: ${{ secrets.AUTH_KEY }}
+        run: |
           echo "root:${{ secrets.AUTH_KEY }}" | sudo chpasswd
 
       # We create and mount the base ext2 image to extract the Docker container's filesystem its contents into.
